--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.109.0
 uvicorn[standard]==0.27.0
 motor==3.3.2
 beanie==1.24.0
-pydantic==2.5.3
+pydantic==2.6.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+gunicorn==21.2.0
