--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-motor==3.6.0
-beanie==1.27.0
-pydantic==2.10.0
-pydantic-settings==2.6.0
-python-dotenv==1.0.0
-gunicorn==23.0.0
+fastapi
+uvicorn[standard]
+motor
+beanie
+pydantic
+pydantic-settings
+python-dotenv
+gunicorn
